# greetness2

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/greetness2/: greetness2.hpp
source/: greetness2.cpp
test/: CMakeLists.txt
test/source/: greetness2_test.cpp
